# a2a-auto-email-processor

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  agents_shutdown.bat  agents_shutdown.ps1  config.py  credentials.json  docker-compose.override.yml  docker-compose.yml  docker-start.ps1  docker_logs.txt  entrypoint.sh  gmail_agent_integration local.py  gmail_agent_integration.py  gmail_email_processor.py  main.py  pyproject.toml  requirements.txt  run_a2a_agents.sh  run_agents.sh  run_chroma_viewer.py  set_host_ip.ps1  setup.py  start_agents.sh  stop_agents.sh  test_agents.py  test_email_processor.py  test_summary_agent.py
a2a_agents/: .env.example  Dockerfile  __init__.py  docker-compose.yml
a2a_agents/email_processor/: __init__.py  __main__.py  agent.py  agent_executor.py
a2a_agents/response_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
a2a_agents/summary_agent/: __main__.py  agent.py  agent_executor.py
agents/: __init__.py  config.py  config_remove.py  email_processor_agent.py  response_agent.py  response_agent_old.py  summary_agent.py  summary_agent_fixed.py
agents/data/chroma/: chroma.sqlite3
agents/output/templates/: common_question_template.txt
chroma_viewer/: __init__.py  config.py  main.py  requirements.txt
chroma_viewer/static/css/: style.css
chroma_viewer/templates/: index.html
data/chroma/: chroma.sqlite3
logs/: EmailProcessor.pid
logs/summaries/: daily_summary_2025-07-24.txt  daily_summary_2025-07-25.txt
output/templates/: summary_template.txt
scripts/: read_chromadb.py
utils/: llm_client.py
(+2 files in other folders)
